name:                hsvm
version:             0.1.0.0
synopsis:            Haskell Support Vector Machine
description:         Please see README.md
homepage:            https://github.com/Drezil/hsvm#readme
license:             MIT
license-file:        LICENSE
author:              Stefan Dresselhaus
maintainer:          sdressel@techfak.uni-bielefeld.de
copyright:           2016 Stefan Dresselhaus
category:            Library
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , subhask >= 0.2.0
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

test-suite hsvm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hsvm
                     , subhask >= 0.2.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fasm
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Drezil/hsvm
